<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral10"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Nombre de la aplicación -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/app_name"
        android:textColor="@color/design_default_color_error"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        tools:ignore="HardcodedText" />

    <!-- Título de planes -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/tituloPlanes"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        tools:ignore="HardcodedText" />

    <!-- Contenedor de los 3 planes -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp">

        <!-- Plan Básico -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/plan1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/precioBasico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="€19,99/mes"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/detalles1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Plan Premium -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/plan2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/precioPremium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="€34,99/mes"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/detalles2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Plan Anual -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/plan3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/precioAnual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="€239,99/año"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/detalles3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!-- Botón para salir -->
    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/comfortaa"
        android:text="@string/btnSalir"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingHorizontal="32dp"
        tools:ignore="HardcodedText" />

</LinearLayout>